# 2048-AI

./: Cargo.toml  README.md  results.csv  results2.csv
src/: engine.rs  expectimax.rs  lib.rs  main.rs  wasm.rs
