[package]
name = "ai-2048"
version = "0.1.0"
authors = ["Matthew Kennedy <kennedymj97@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
bitintr = "0.3"
wasm-bindgen = "0.2"
